Added components: ListSelector, SelectorItem.

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+<!--    TODO: add tab icon-->
+<!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>New project</title>
   </head>
   <body>
+  <noscript>Please enable JavaScript to use this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
