--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-<!--    TODO: add tab icon-->
-<!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
+<!--    <link rel="icon" type="image/x-icon" href="" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>New project</title>
   </head>
